changed fill value

--- a/production/index.html
+++ b/production/index.html
@@ -825,7 +825,7 @@
       lines: {
         show: true,
         lineWidth: 1.2,
-        fill: true
+        fill: false
       }
     },
     xaxis: {
