--- a/production/index.html
+++ b/production/index.html
@@ -93,19 +93,25 @@
 
         </div>
         <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-          <span class="count_top"> Instance Count</span>
-          <div class="count_bottom" id="instanceCount" class="count"></div>
+          <span class="count_top" style="font-size:20px;text-align:center"> Instance Count</span>
+          <div class="count_bottom" id="instanceCount" class="count" style="color:#1ABB9C;font-size:18px;text-align:center;font-weight: bold"></div>
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-          <span class="count_top"> Service Name</span>
-          <div class="count_bottom" id="serviceName" class="count"><font></div>
+          <span class="count_top" style="font-size:20px;text-align:center">&nbsp;&nbsp;&nbsp;Service Name</span>
+          <div class="count_bottom" id="serviceName" class="count" style="color:#1ABB9C;font-size:18px;text-align:center;font-weight: bold"></div>
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-          <span class="count_top"> Evaluation State</span>
-          <div class="count_bottom" id="evaluationState" class="count"></div>
+          <span class="count_top" style="font-size:20px;text-align:center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;State</span>
+          <div class="count_bottom" id="evaluationState" class="count" style="color:#1ABB9C;font-size:18px;text-align:center;font-weight: bold"></div>
         </div>
+
+        <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
+          <span class="count_top"style="font-size:20px;text-align:center"></span>
+          <div class="count_bottom" id="" class="count" style="color:#1ABB9C;font-size:16px;text-align:center"></div>
+        </div>
+
       </div>
       <!-- /top tiles -->
 
@@ -122,7 +128,7 @@
             <div class="col-md-9 col-sm-9 col-xs-12">
               <div id="placeholder33" style="height: 260px; display: none" class="demo-placeholder"></div>
               <div style="width: 100%;">
-                <div id="canvas_dahs" class="demo-placeholder" style="width: 100%; height:270px;"></div>
+                <div id="canvas_dahs" class="demo-placeholder" style="width: 120%; height:400px;"></div>
               </div>
             </div>
 
@@ -132,246 +138,6 @@
 
       </div>
       <br />
-
-      <div class="row">
-
-
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="x_panel tile fixed_height_320">
-            <div class="x_title">
-              <h2>App Versions</h2>
-              <ul class="nav navbar-right panel_toolbox">
-                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Settings 1</a>
-                    </li>
-                    <li><a href="#">Settings 2</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a class="close-link"><i class="fa fa-close"></i></a>
-                </li>
-              </ul>
-              <div class="clearfix"></div>
-            </div>
-            <div class="x_content">
-              <h4>App Usage across versions</h4>
-              <div class="widget_summary">
-                <div class="w_left w_25">
-                  <span>0.1.5.2</span>
-                </div>
-                <div class="w_center w_55">
-                  <div class="progress">
-                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 66%;">
-                      <span class="sr-only">60% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="w_right w_20">
-                  <span>123k</span>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-
-              <div class="widget_summary">
-                <div class="w_left w_25">
-                  <span>0.1.5.3</span>
-                </div>
-                <div class="w_center w_55">
-                  <div class="progress">
-                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
-                      <span class="sr-only">60% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="w_right w_20">
-                  <span>53k</span>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-              <div class="widget_summary">
-                <div class="w_left w_25">
-                  <span>0.1.5.4</span>
-                </div>
-                <div class="w_center w_55">
-                  <div class="progress">
-                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-                      <span class="sr-only">60% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="w_right w_20">
-                  <span>23k</span>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-              <div class="widget_summary">
-                <div class="w_left w_25">
-                  <span>0.1.5.5</span>
-                </div>
-                <div class="w_center w_55">
-                  <div class="progress">
-                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 5%;">
-                      <span class="sr-only">60% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="w_right w_20">
-                  <span>3k</span>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-              <div class="widget_summary">
-                <div class="w_left w_25">
-                  <span>0.1.5.6</span>
-                </div>
-                <div class="w_center w_55">
-                  <div class="progress">
-                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 2%;">
-                      <span class="sr-only">60% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="w_right w_20">
-                  <span>1k</span>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="x_panel tile fixed_height_320 overflow_hidden">
-            <div class="x_title">
-              <h2>Device Usage</h2>
-              <ul class="nav navbar-right panel_toolbox">
-                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Settings 1</a>
-                    </li>
-                    <li><a href="#">Settings 2</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a class="close-link"><i class="fa fa-close"></i></a>
-                </li>
-              </ul>
-              <div class="clearfix"></div>
-            </div>
-            <div class="x_content">
-              <table class="" style="width:100%">
-                <tr>
-                  <th style="width:37%;">
-                    <p>Top 5</p>
-                  </th>
-                  <th>
-                    <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
-                      <p class="">Device</p>
-                    </div>
-                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                      <p class="">Progress</p>
-                    </div>
-                  </th>
-                </tr>
-                <tr>
-                  <td>
-                    <canvas id="canvas1" height="140" width="140" style="margin: 15px 10px 10px 0"></canvas>
-                  </td>
-                  <td>
-                    <table class="tile_info">
-                      <tr>
-                        <td>
-                          <p><i class="fa fa-square blue"></i>IOS </p>
-                        </td>
-                        <td>30%</td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p><i class="fa fa-square green"></i>Android </p>
-                        </td>
-                        <td>10%</td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p><i class="fa fa-square purple"></i>Blackberry </p>
-                        </td>
-                        <td>20%</td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p><i class="fa fa-square aero"></i>Symbian </p>
-                        </td>
-                        <td>15%</td>
-                      </tr>
-                      <tr>
-                        <td>
-                          <p><i class="fa fa-square red"></i>Others </p>
-                        </td>
-                        <td>30%</td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="x_panel tile fixed_height_320">
-            <div class="x_title">
-              <h2>Quick Settings</h2>
-              <ul class="nav navbar-right panel_toolbox">
-                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Settings 1</a>
-                    </li>
-                    <li><a href="#">Settings 2</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a class="close-link"><i class="fa fa-close"></i></a>
-                </li>
-              </ul>
-              <div class="clearfix"></div>
-            </div>
-            <div class="x_content">
-              <div class="dashboard-widget-content">
-                <ul class="quick-list">
-                  <li><i class="fa fa-calendar-o"></i><a href="#">Settings</a>
-                  </li>
-                  <li><i class="fa fa-bars"></i><a href="#">Subscription</a>
-                  </li>
-                  <li><i class="fa fa-bar-chart"></i><a href="#">Auto Renewal</a> </li>
-                  <li><i class="fa fa-line-chart"></i><a href="#">Achievements</a>
-                  </li>
-                  <li><i class="fa fa-bar-chart"></i><a href="#">Auto Renewal</a> </li>
-                  <li><i class="fa fa-line-chart"></i><a href="#">Achievements</a>
-                  </li>
-                  <li><i class="fa fa-area-chart"></i><a href="#">Logout</a>
-                  </li>
-                </ul>
-
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
 
       <!--<div class="row">
         <div class="col-md-4 col-sm-4 col-xs-12">
@@ -824,36 +590,28 @@
     series: {
       lines: {
         show: true,
-        lineWidth: 1.2,
+        lineWidth: 5,
         fill: false
       }
     },
     xaxis: {
-      mode: "time",
-      tickColor: "rgba(51, 51, 51, 0.06)",
-      tickSize: [15, "minute"],
+      axisLabel: "Time",
+      axisLabelUseCanvas: true,
       tickFormatter: function (v, axis) {
         var date = new Date(0);
         date.setUTCSeconds(v);
 
-        if (date.getSeconds() % 20 == 0) {
-          var hours = date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
-          var minutes = date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
-          var seconds = date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
-          //alert('returning'+hours + ":" + minutes + ":" + seconds)
-          return hours + ":" + minutes + ":" + seconds;
-        } else {
+        var hours = date.getHours() < 10 ? "0" + date.getHours() : date.getHours();
+        var minutes = date.getMinutes() < 10 ? "0" + date.getMinutes() : date.getMinutes();
+        var seconds = date.getSeconds() < 10 ? "0" + date.getSeconds() : date.getSeconds();
+        //alert('returning'+hours + ":" + minutes + ":" + seconds)
+        return hours + ":" + minutes + ":" + seconds;
 
-          return "d";
-        }
       },
-      axisLabel: "Time",
-      axisLabelUseCanvas: true,
       axisLabelFontSizePixels: 12,
-      axisLabelFontFamily: 'Verdana, Arial',
-      axisLabelPadding: 10
+      axisLabelFontFamily: 'Verdana, Arial, Helvetica, Tahoma, sans-serif',
+      axisLabelPadding: 5
     },
-
     yaxis: {
       min: 0,
       max: 100,
@@ -871,9 +629,6 @@
       axisLabelFontSizePixels: 12,
       axisLabelFontFamily: 'Verdana, Arial',
       axisLabelPadding: 6
-    },
-    legend: {
-      labelBoxBorderColor: "#fff"
     }
   };
 
@@ -882,11 +637,11 @@
 
     dataset = [{
       label: "CPU",
-      color:"RED",
+      color:"#3498DB",
       data: cpuData
     },{
       label: "Memory",
-      color:"GREEN",
+      color:"#26B99A",
       data: memoryData
     }];
 
