changed line width

--- a/production/index.html
+++ b/production/index.html
@@ -592,7 +592,18 @@
         show: true,
         lineWidth: 5,
         fill: false
-      }
+      },
+      /*splines: {
+        show: true,
+        tension: 0.4,
+        lineWidth: 5,
+        fill: false
+      },
+      points: {
+        radius: 0,
+        show: true
+      },*/
+      shadowSize: 2
     },
     xaxis: {
       axisLabel: "Time",
