--- a/production/index.html
+++ b/production/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Autoscaler | </title>
+  <title>Autoscaler</title>
 
   <!-- Bootstrap -->
   <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -68,7 +68,7 @@
 
             <div class="row x_title">
               <div class="col-md-6">
-                <h3>Container Activity <small>Shows CPU and memory activity</small></h3>
+                <h3>Container Activity <small>CPU / Memory Utilization</small></h3>
               </div>
             </div>
 
